--- a/Images+Booki/index.html
+++ b/Images+Booki/index.html
@@ -30,7 +30,7 @@
 
           <div class="trouvez">
 
-            <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+            <h1>Trouvez votre hébergement pour des vacances de rêve !!</h1>
 
             <p>En plein centre ville ou en nature</p>
 
