--- a/Images+Booki/index.html
+++ b/Images+Booki/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="CSS/index.css">
+  <link rel="stylesheet" href="index.css">
   <script src="https://kit.fontawesome.com/dd34c2d2c9.js" crossorigin="anonymous"></script>
   <title>Booki- Trouvez votre location saisonnière</title>
 </head>
